// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`okta-verify-email-channel-enrollment should render email channel form and display channel selection form when clicking try a different method link 1`] = `
<div>
  <span>
    <main
      class="ods-4o5zYQ ods-76eppy ods-66Tc65 ods-6lar65 ods-2oc5SK ods-4XAbls ods-2NLKpK ods-1ll9ky ods-4IdjLs auth-container main-container mainViewContainer"
    >
      <div
        class="ods-4o5zYQ ods-2Se4oq ods-2VFzyK ods-1qUaxm ods-1oujX1 ods-78Q1Pv ods-3x5mmc ods-7mcS6o ods-7lpPkQ ods-2oc5SK ods-4XAbls ods-2NLKpK ods-1ll9ky ods-4IdjLs siwContainer"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader authCoinSpacing"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-0"
          />
          <div
            class="ods-4o5zYQ ods-2oc5SK ods-4XAbls ods-2NLKpK ods-1ll9ky ods-4IdjLs iconContainer authCoinOverlay"
          >
            <mocksvgicon />
          </div>
        </div>
        <div
          class="MuiBox-root emotion-1"
        >
          <div
            class="identifier-container MuiBox-root emotion-2"
          >
            <div
              class="identifierContainer MuiBox-root emotion-3"
            >
              <span
                class="userIconContainer MuiBox-root emotion-4"
              >
                <svg
                  class="ods-2icygl"
                  fill="none"
                  role="presentation"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="identifier identifierSpan MuiBox-root emotion-4"
                data-se="identifier"
              >
                tester2@test.com
              </span>
            </div>
          </div>
          <form
            class="o-form"
            data-se="form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-6"
            >
              <div
                class="MuiBox-root emotion-6"
              >
                <div
                  class="MuiBox-root emotion-8"
                >
                  <div
                    class="MuiBox-root emotion-9"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h3 emotion-10"
                    >
                      More options
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-8"
                >
                  <fieldset
                    class="MuiFormControl-root emotion-12"
                  >
                    <label
                      class="MuiFormLabel-root MuiFormLabel-colorPrimary emotion-13"
                    >
                      Which option do you want to try?
                    </label>
                    <div
                      class="MuiFormGroup-root emotion-14"
                      id="generated"
                      role="radiogroup"
                    >
                      <label
                        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-15"
                      >
                        <span
                          class="MuiRadio-root MuiRadio-colorPrimary MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root emotion-16"
                        >
                          <input
                            class="PrivateSwitchBase-input emotion-17"
                            name="authenticator.channel"
                            type="radio"
                            value="qrcode"
                          />
                          <span
                            class="emotion-18"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-19"
                              data-testid="RadioButtonUncheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-20"
                              data-testid="RadioButtonCheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-21"
                        >
                          Scan a QR code
                        </span>
                      </label>
                      <label
                        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-15"
                      >
                        <span
                          class="MuiRadio-root MuiRadio-colorPrimary MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root emotion-16"
                        >
                          <input
                            class="PrivateSwitchBase-input emotion-17"
                            name="authenticator.channel"
                            type="radio"
                            value="sms"
                          />
                          <span
                            class="emotion-18"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-19"
                              data-testid="RadioButtonUncheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-20"
                              data-testid="RadioButtonCheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-21"
                        >
                          Text me a setup link
                        </span>
                      </label>
                    </div>
                    
                  </fieldset>
                </div>
                <div
                  class="MuiBox-root emotion-8"
                >
                  <button
                    class="MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  emotion-30"
                    data-se="#/properties/submit"
                    tabindex="0"
                    type="submit"
                  >
                    Next
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <button
                  class="MuiButton-root MuiButton-floating MuiButton-floatingPrimary MuiButton-sizeMedium MuiButton-floatingSizeMedium MuiButton-disableElevation MuiButtonBase-root  emotion-32"
                  data-se="switchAuthenticator"
                  tabindex="0"
                  type="button"
                >
                  Return to authenticator list
                </button>
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <button
                  class="MuiButton-root MuiButton-floating MuiButton-floatingPrimary MuiButton-sizeMedium MuiButton-floatingSizeMedium MuiButton-disableElevation MuiButtonBase-root  emotion-32"
                  data-se="cancel"
                  tabindex="0"
                  type="button"
                >
                  Back to sign in
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </span>
</div>
`;

exports[`okta-verify-email-channel-enrollment should render email channel form and send correct payload 1`] = `
<div>
  <span>
    <main
      class="ods-4o5zYQ ods-76eppy ods-66Tc65 ods-6lar65 ods-2oc5SK ods-4XAbls ods-2NLKpK ods-1ll9ky ods-4IdjLs auth-container main-container mainViewContainer"
    >
      <div
        class="ods-4o5zYQ ods-2Se4oq ods-2VFzyK ods-1qUaxm ods-1oujX1 ods-78Q1Pv ods-3x5mmc ods-7mcS6o ods-7lpPkQ ods-2oc5SK ods-4XAbls ods-2NLKpK ods-1ll9ky ods-4IdjLs siwContainer"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader authCoinSpacing"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-0"
          />
          <div
            class="ods-4o5zYQ ods-2oc5SK ods-4XAbls ods-2NLKpK ods-1ll9ky ods-4IdjLs iconContainer authCoinOverlay"
          >
            <mocksvgicon />
          </div>
        </div>
        <div
          class="MuiBox-root emotion-1"
        >
          <div
            class="identifier-container MuiBox-root emotion-2"
          >
            <div
              class="identifierContainer MuiBox-root emotion-3"
            >
              <span
                class="userIconContainer MuiBox-root emotion-4"
              >
                <svg
                  class="ods-2icygl"
                  fill="none"
                  role="presentation"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="identifier identifierSpan MuiBox-root emotion-4"
                data-se="identifier"
              >
                tester2@test.com
              </span>
            </div>
          </div>
          <form
            class="o-form"
            data-se="form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-6"
            >
              <div
                class="MuiBox-root emotion-6"
              >
                <div
                  class="MuiBox-root emotion-8"
                >
                  <div
                    class="MuiBox-root emotion-9"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h3 emotion-10"
                    >
                      Set up Okta Verify via email link
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-8"
                >
                  <div
                    class="MuiBox-root emotion-4"
                  >
                    <label
                      class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary emotion-13"
                      for="generated"
                    >
                      Email
                    </label>
                    <div
                      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-14"
                    >
                      <input
                        aria-invalid="false"
                        autocomplete="email"
                        class="MuiOutlinedInput-input MuiInputBase-input emotion-15"
                        data-se="email"
                        id="generated"
                        name="email"
                        type="text"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline emotion-16"
                      >
                        <legend
                          class="emotion-17"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-8"
                >
                  <div
                    class="ods-4o5zYQ ods-76eppy ods-2famef ods-2oc5SK ods-4XAbls ods-2NLKpK ods-1ll9ky ods-4IdjLs"
                  >
                    <p
                      class="ods-4o5zYQ ods-nqMobL ods-4amLpn ods-5fvoER ods-6BF3N5 ods-7KlglL ods-6MIfC2 ods-14pjkk ods-5IIKpe ods-6iOjmZ"
                    >
                      Make sure you can access the email on your mobile device.
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-8"
                >
                  <button
                    class="MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  emotion-20"
                    data-se="#/properties/setupLink"
                    tabindex="0"
                    type="submit"
                  >
                    Send me the setup link
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-8"
                >
                  <button
                    class="MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  emotion-22"
                    tabindex="0"
                    type="button"
                  >
                    Try a different way
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <button
                  class="MuiButton-root MuiButton-floating MuiButton-floatingPrimary MuiButton-sizeMedium MuiButton-floatingSizeMedium MuiButton-disableElevation MuiButtonBase-root  emotion-24"
                  data-se="switchAuthenticator"
                  tabindex="0"
                  type="button"
                >
                  Return to authenticator list
                </button>
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <button
                  class="MuiButton-root MuiButton-floating MuiButton-floatingPrimary MuiButton-sizeMedium MuiButton-floatingSizeMedium MuiButton-disableElevation MuiButtonBase-root  emotion-24"
                  data-se="cancel"
                  tabindex="0"
                  type="button"
                >
                  Back to sign in
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </span>
</div>
`;
